Remove main folder

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         </a>
 
-        <a href="..//Linked-List-Visualization-master/index.html">
+        <a href="/Linked-List-Visualization-master/index.html">
             <div class='algo' id='sudoku'>
 
                 <div class="position">Linked List</div>
@@ -54,7 +54,7 @@
             </div>
         </a> 
         
-        <a href="..//Binary-Tree-Visualization-master/index.html"> 
+        <a href="/Binary-Tree-Visualization-master/index.html"> 
             <div class='algo' id='soe'>
                 <div class="position">Binary tree</div>
                 <img src="./img/tree.jpg" alt="" class="algo-img">
@@ -70,7 +70,7 @@
                
             </div> 
         </a>
-        <a href="..//visualising-stack-implementation-master/index.html"> 
+        <a href="/visualising-stack-implementation-master/index.html"> 
             <div class='algo' id='soe'>
                 <div class="position">Stack Implement </div>
                 <img src="./img/stack.jpg" alt="" class="algo-img">
